Done, pre-OpenRouter

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -43,6 +43,11 @@
        "      <th>candidate_solution</th>\n",
        "      <th>candidate_verification_reasoning</th>\n",
        "      <th>candidate_verification_result</th>\n",
+       "      <th>completion_id</th>\n",
+       "      <th>prefix</th>\n",
+       "      <th>completion</th>\n",
+       "      <th>completion_verification_result</th>\n",
+       "      <th>completion_verification_reasoning</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -52,49 +57,74 @@
        "      <td>Given that $a$, $b$, and $c$ are the lengths o...</td>\n",
        "      <td>Given that point $P(1, \\sqrt{2})$ lies on the ...</td>\n",
        "      <td>0</td>\n",
-       "      <td>We are given that $a$, $b$, and $c$ are the si...</td>\n",
-       "      <td>The final answer provided by the ground truth ...</td>\n",
+       "      <td>We are given that $P(1, \\sqrt{2})$ lies on the...</td>\n",
+       "      <td>The final answer of the ground truth solution ...</td>\n",
        "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>&lt;DummyPrefix&gt;</td>\n",
+       "      <td>&lt;DummyCompletion&gt;</td>\n",
+       "      <td>False</td>\n",
+       "      <td>&lt;DummyVerificationReasoning&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>106016</td>\n",
        "      <td>Given that $a$, $b$, and $c$ are the lengths o...</td>\n",
        "      <td>Given that point $P(1, \\sqrt{2})$ lies on the ...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>We are given that $a$, $b$, and $c$ are the si...</td>\n",
-       "      <td>The final answer provided by the ground truth ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>We are given that $P(1, \\sqrt{2})$ lies on the...</td>\n",
+       "      <td>The final answer of the ground truth solution ...</td>\n",
        "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt;DummyPrefix&gt;</td>\n",
+       "      <td>&lt;DummyCompletion&gt;</td>\n",
+       "      <td>False</td>\n",
+       "      <td>&lt;DummyVerificationReasoning&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>106016</td>\n",
        "      <td>Given that $a$, $b$, and $c$ are the lengths o...</td>\n",
        "      <td>Given that point $P(1, \\sqrt{2})$ lies on the ...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>We know that the area of a right triangle is h...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>We are given that $a$, $b$, and $c$ are the si...</td>\n",
        "      <td>The final answer provided by the ground truth ...</td>\n",
        "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>&lt;DummyPrefix&gt;</td>\n",
+       "      <td>&lt;DummyCompletion&gt;</td>\n",
+       "      <td>True</td>\n",
+       "      <td>&lt;DummyVerificationReasoning&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>159073</td>\n",
-       "      <td>The function $y=x^{2}+2ax+1$ is an increasing ...</td>\n",
-       "      <td>First, we find the axis of symmetry for the fu...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>To solve this problem, we need to find the val...</td>\n",
-       "      <td>The final answer from the ground truth solutio...</td>\n",
+       "      <td>106016</td>\n",
+       "      <td>Given that $a$, $b$, and $c$ are the lengths o...</td>\n",
+       "      <td>Given that point $P(1, \\sqrt{2})$ lies on the ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>We are given that $a$, $b$, and $c$ are the si...</td>\n",
+       "      <td>The final answer provided by the ground truth ...</td>\n",
        "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>&lt;DummyPrefix&gt;</td>\n",
+       "      <td>&lt;DummyCompletion&gt;</td>\n",
+       "      <td>False</td>\n",
+       "      <td>&lt;DummyVerificationReasoning&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>159073</td>\n",
-       "      <td>The function $y=x^{2}+2ax+1$ is an increasing ...</td>\n",
-       "      <td>First, we find the axis of symmetry for the fu...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>To solve this problem, we need to find the val...</td>\n",
-       "      <td>The final answer from the ground truth solutio...</td>\n",
+       "      <td>106016</td>\n",
+       "      <td>Given that $a$, $b$, and $c$ are the lengths o...</td>\n",
+       "      <td>Given that point $P(1, \\sqrt{2})$ lies on the ...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>&lt;DummySolution&gt;</td>\n",
+       "      <td>&lt;DummyVerificationReasoning&gt;</td>\n",
        "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>&lt;DummyPrefix&gt;</td>\n",
+       "      <td>&lt;DummyCompletion&gt;</td>\n",
+       "      <td>False</td>\n",
+       "      <td>&lt;DummyVerificationReasoning&gt;</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -105,36 +135,50 @@
        "0  106016  Given that $a$, $b$, and $c$ are the lengths o...   \n",
        "1  106016  Given that $a$, $b$, and $c$ are the lengths o...   \n",
        "2  106016  Given that $a$, $b$, and $c$ are the lengths o...   \n",
-       "3  159073  The function $y=x^{2}+2ax+1$ is an increasing ...   \n",
-       "4  159073  The function $y=x^{2}+2ax+1$ is an increasing ...   \n",
+       "3  106016  Given that $a$, $b$, and $c$ are the lengths o...   \n",
+       "4  106016  Given that $a$, $b$, and $c$ are the lengths o...   \n",
        "\n",
        "                                            solution  solution_id  \\\n",
        "0  Given that point $P(1, \\sqrt{2})$ lies on the ...            0   \n",
-       "1  Given that point $P(1, \\sqrt{2})$ lies on the ...            1   \n",
-       "2  Given that point $P(1, \\sqrt{2})$ lies on the ...            2   \n",
-       "3  First, we find the axis of symmetry for the fu...            0   \n",
-       "4  First, we find the axis of symmetry for the fu...            1   \n",
+       "1  Given that point $P(1, \\sqrt{2})$ lies on the ...            0   \n",
+       "2  Given that point $P(1, \\sqrt{2})$ lies on the ...            1   \n",
+       "3  Given that point $P(1, \\sqrt{2})$ lies on the ...            1   \n",
+       "4  Given that point $P(1, \\sqrt{2})$ lies on the ...            2   \n",
        "\n",
        "                                  candidate_solution  \\\n",
-       "0  We are given that $a$, $b$, and $c$ are the si...   \n",
-       "1  We are given that $a$, $b$, and $c$ are the si...   \n",
-       "2  We know that the area of a right triangle is h...   \n",
-       "3  To solve this problem, we need to find the val...   \n",
-       "4  To solve this problem, we need to find the val...   \n",
+       "0  We are given that $P(1, \\sqrt{2})$ lies on the...   \n",
+       "1  We are given that $P(1, \\sqrt{2})$ lies on the...   \n",
+       "2  We are given that $a$, $b$, and $c$ are the si...   \n",
+       "3  We are given that $a$, $b$, and $c$ are the si...   \n",
+       "4                                    <DummySolution>   \n",
        "\n",
        "                    candidate_verification_reasoning  \\\n",
-       "0  The final answer provided by the ground truth ...   \n",
-       "1  The final answer provided by the ground truth ...   \n",
+       "0  The final answer of the ground truth solution ...   \n",
+       "1  The final answer of the ground truth solution ...   \n",
        "2  The final answer provided by the ground truth ...   \n",
-       "3  The final answer from the ground truth solutio...   \n",
-       "4  The final answer from the ground truth solutio...   \n",
+       "3  The final answer provided by the ground truth ...   \n",
+       "4                       <DummyVerificationReasoning>   \n",
        "\n",
-       "   candidate_verification_result  \n",
-       "0                          False  \n",
-       "1                          False  \n",
-       "2                          False  \n",
-       "3                          False  \n",
-       "4                          False  "
+       "   candidate_verification_result  completion_id         prefix  \\\n",
+       "0                          False              0  <DummyPrefix>   \n",
+       "1                          False              1  <DummyPrefix>   \n",
+       "2                          False              0  <DummyPrefix>   \n",
+       "3                          False              1  <DummyPrefix>   \n",
+       "4                          False              0  <DummyPrefix>   \n",
+       "\n",
+       "          completion  completion_verification_result  \\\n",
+       "0  <DummyCompletion>                           False   \n",
+       "1  <DummyCompletion>                           False   \n",
+       "2  <DummyCompletion>                            True   \n",
+       "3  <DummyCompletion>                           False   \n",
+       "4  <DummyCompletion>                           False   \n",
+       "\n",
+       "  completion_verification_reasoning  \n",
+       "0      <DummyVerificationReasoning>  \n",
+       "1      <DummyVerificationReasoning>  \n",
+       "2      <DummyVerificationReasoning>  \n",
+       "3      <DummyVerificationReasoning>  \n",
+       "4      <DummyVerificationReasoning>  "
       ]
      },
      "execution_count": 3,
@@ -143,7 +187,8 @@
     }
    ],
    "source": [
-    "\n"
+    "df = pd.read_csv(\"datasets/derived/interesting_problems_completed.csv\")\n",
+    "df.head()\n"
    ]
   },
   {
