--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -170,205 +170,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[np.int64(54179), np.int64(114941), np.int64(159073), np.int64(239483), np.int64(245856)]\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"datasets/derived/test-qwen/interesting_problems_completed.csv\")\n",
+    "print(list(df[\"row_id\"].unique()))\n",
+    "print(len(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub_df = df[df[\"row_id\"] == 54179]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>row_id</th>\n",
-       "      <th>problem</th>\n",
-       "      <th>solution</th>\n",
-       "      <th>solution_id</th>\n",
-       "      <th>candidate_solution</th>\n",
-       "      <th>candidate_verification_reasoning</th>\n",
-       "      <th>candidate_verification_result</th>\n",
-       "      <th>completion_id</th>\n",
-       "      <th>prefix</th>\n",
-       "      <th>completion</th>\n",
-       "      <th>completion_verification_result</th>\n",
-       "      <th>completion_verification_reasoning</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>44424</td>\n",
-       "      <td>If the function $f(x) = a\\sin x + \\cos x$ is m...</td>\n",
-       "      <td>To solve this, we find the derivative of the f...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>We know that the function $f(x) = a\\sin x + \\c...</td>\n",
-       "      <td>The final answer provided by the ground truth ...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>We know that the function $f(x) = a\\sin x + \\c...</td>\n",
-       "      <td>increases in the given interval, $a$ also incr...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>The final answer provided in the ground truth ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>44424</td>\n",
-       "      <td>If the function $f(x) = a\\sin x + \\cos x$ is m...</td>\n",
-       "      <td>To solve this, we find the derivative of the f...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>We know that the function $f(x) = a\\sin x + \\c...</td>\n",
-       "      <td>The final answer provided by the ground truth ...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "      <td>We know that the function $f(x) = a\\sin x + \\c...</td>\n",
-       "      <td>increases in the interval, $\\tan x$ will take ...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>The final answer provided in the ground truth ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>44424</td>\n",
-       "      <td>If the function $f(x) = a\\sin x + \\cos x$ is m...</td>\n",
-       "      <td>To solve this, we find the derivative of the f...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>We know that a function is monotonically incre...</td>\n",
-       "      <td>The final answer provided in the ground truth ...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>We know that a function is monotonically incre...</td>\n",
-       "      <td>x$ is positive because this is the range betw...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>The final answer of the ground truth solution ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>44424</td>\n",
-       "      <td>If the function $f(x) = a\\sin x + \\cos x$ is m...</td>\n",
-       "      <td>To solve this, we find the derivative of the f...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>We know that a function is monotonically incre...</td>\n",
-       "      <td>The final answer provided in the ground truth ...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "      <td>We know that a function is monotonically incre...</td>\n",
-       "      <td>x$ is positive because this is the range wher...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>The final answer from the ground truth solutio...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>44424</td>\n",
-       "      <td>If the function $f(x) = a\\sin x + \\cos x$ is m...</td>\n",
-       "      <td>To solve this, we find the derivative of the f...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>We are given the function $f(x) = a\\sin x + \\c...</td>\n",
-       "      <td>The final answer provided in the ground truth ...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>We are given the function $f(x) = a\\sin x + \\c...</td>\n",
-       "      <td>sin x and cos x are positive in this interval)...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>The final answer provided in the ground truth ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   row_id                                            problem  \\\n",
-       "0   44424  If the function $f(x) = a\\sin x + \\cos x$ is m...   \n",
-       "1   44424  If the function $f(x) = a\\sin x + \\cos x$ is m...   \n",
-       "2   44424  If the function $f(x) = a\\sin x + \\cos x$ is m...   \n",
-       "3   44424  If the function $f(x) = a\\sin x + \\cos x$ is m...   \n",
-       "4   44424  If the function $f(x) = a\\sin x + \\cos x$ is m...   \n",
-       "\n",
-       "                                            solution  solution_id  \\\n",
-       "0  To solve this, we find the derivative of the f...            0   \n",
-       "1  To solve this, we find the derivative of the f...            0   \n",
-       "2  To solve this, we find the derivative of the f...            1   \n",
-       "3  To solve this, we find the derivative of the f...            1   \n",
-       "4  To solve this, we find the derivative of the f...            2   \n",
-       "\n",
-       "                                  candidate_solution  \\\n",
-       "0  We know that the function $f(x) = a\\sin x + \\c...   \n",
-       "1  We know that the function $f(x) = a\\sin x + \\c...   \n",
-       "2  We know that a function is monotonically incre...   \n",
-       "3  We know that a function is monotonically incre...   \n",
-       "4  We are given the function $f(x) = a\\sin x + \\c...   \n",
-       "\n",
-       "                    candidate_verification_reasoning  \\\n",
-       "0  The final answer provided by the ground truth ...   \n",
-       "1  The final answer provided by the ground truth ...   \n",
-       "2  The final answer provided in the ground truth ...   \n",
-       "3  The final answer provided in the ground truth ...   \n",
-       "4  The final answer provided in the ground truth ...   \n",
-       "\n",
-       "   candidate_verification_result  completion_id  \\\n",
-       "0                          False              0   \n",
-       "1                          False              1   \n",
-       "2                          False              0   \n",
-       "3                          False              1   \n",
-       "4                          False              0   \n",
-       "\n",
-       "                                              prefix  \\\n",
-       "0  We know that the function $f(x) = a\\sin x + \\c...   \n",
-       "1  We know that the function $f(x) = a\\sin x + \\c...   \n",
-       "2  We know that a function is monotonically incre...   \n",
-       "3  We know that a function is monotonically incre...   \n",
-       "4  We are given the function $f(x) = a\\sin x + \\c...   \n",
-       "\n",
-       "                                          completion  \\\n",
-       "0  increases in the given interval, $a$ also incr...   \n",
-       "1  increases in the interval, $\\tan x$ will take ...   \n",
-       "2   x$ is positive because this is the range betw...   \n",
-       "3   x$ is positive because this is the range wher...   \n",
-       "4  sin x and cos x are positive in this interval)...   \n",
-       "\n",
-       "   completion_verification_result  \\\n",
-       "0                           False   \n",
-       "1                           False   \n",
-       "2                           False   \n",
-       "3                           False   \n",
-       "4                           False   \n",
-       "\n",
-       "                   completion_verification_reasoning  \n",
-       "0  The final answer provided in the ground truth ...  \n",
-       "1  The final answer provided in the ground truth ...  \n",
-       "2  The final answer of the ground truth solution ...  \n",
-       "3  The final answer from the ground truth solutio...  \n",
-       "4  The final answer provided in the ground truth ...  "
+       "'To find the probability that the drawing of cards stops exactly after 5 draws, we need to consider the following:\\n\\n1. The drawing stops after 5 draws if and only if exactly 2 of the 5 draws are repeats of the numbers already drawn and the 5th draw is the first time the third number is drawn.\\n2. The first 4 draws must contain exactly 2 different numbers, and the 5th draw must be the third different number.\\n\\nWe will calculate the probability step-by-step as follows:\\n\\n1. **Choose the two numbers that appear in the first 4 draws:** There are \\\\(\\\\binom{3}{2} = 3\\\\) ways to choose which two numbers appear in the first 4 draws. Let\\'s say the two numbers are \\\\(a\\\\) and \\\\(b\\\\).\\n2. **Distribute \\\\(a\\\\) and \\\\(b\\\\) in the first 4 draws:** The number of ways to assign \\\\(a\\\\) and \\\\(b\\\\) to 4 draws such that both \\\\(a\\\\) and \\\\(b\\\\) appear at least once is the number of ways to partition 4 items into two non-empty groups, which is given by \\\\(2^4 - 2 = 16 - 2 = 14\\\\) (total ways to assign 4 draws to 2 numbers minus the 2 ways where all draws are the same number).\\n3. **Choose the third number for the 5th draw:** There are 2 numbers left to choose from, and the 5th draw must be the third number.\\n4. **Calculate the probability for a specific choice of numbers and distribution:** The probability of any specific sequence of 5 draws (with the above conditions) is \\\\(\\\\left(\\\\frac{1}{3}\\\\right)^5 = \\\\frac{1}{243}\\\\).\\n\\nNow, we combine all these probabilities together. The total number of favorable sequences is \\\\(3 \\\\times 14 \\\\times 2 = 84\\\\), and the probability of each sequence is \\\\(\\\\frac{1}{243}\\\\). Therefore, the total probability is:\\n\\\\[\\n84 \\\\times \\\\frac{1}{243} = \\\\frac{84}{243} = \\\\frac{28}{81}.\\n\\\\]\\n\\nHowever, we need to re-evaluate the distribution part. The correct number of ways to distribute 4 draws between 2 numbers such that both numbers appear at least once is given by the \"stars and bars\" method with a restriction, which is \\\\(2^4 - 2 = 14\\\\), but we need to consider the specific order and the fact that the 5th draw must be the new number, so the correct calculation is:\\n\\\\[\\n3 \\\\times \\\\left(\\\\binom{4}{1} + \\\\binom{4}{2} + \\\\binom{4}{3}\\\\right) \\\\times 2 = 3 \\\\times (4 + 6 + 4) \\\\times 2 = 3 \\\\times 14 \\\\times 2 = 84.\\n\\\\]\\n\\nBut the correct way to look at it is the number of ways to have exactly 2 of the 5 draws be repeats of the first two numbers and the 5th be the third number, which is:\\n\\\\[\\n3 \\\\times \\\\left(\\\\binom{4}{2} \\\\times 2! \\\\times 2\\\\right) = 3 \\\\times (6 \\\\times 2 \\\\times 2) = 72.\\n\\\\]\\n\\nSo the correct probability is:\\n\\\\[\\n\\\\frac{72}{243} = \\\\frac{24}{81} = \\\\frac{8}{27}.\\n\\\\]\\n\\nBut the correct answer as per the problem and the options is:\\n\\\\[\\n\\\\boxed{C}.\\n\\\\]'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"datasets/derived/test-cohere/interesting_problems_completed.csv\")\n",
-    "df.head()"
+    "candidate_solution = sub_df.iloc[0][\"candidate_solution\"]\n",
+    "prefix = sub_df.iloc[0][\"prefix\"]\n",
+    "\n",
+    "# Does it contain?\n",
+    "\"stars\" in candidate_solution\n",
+    "candidate_solution[candidate_solution.index(\"stars\")-10:candidate_solution.index(\"stars\")+30]\n",
+    "\n",
+    "candidate_solution\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To find the probability that the drawing of cards stops exactly after 5 draws, we need to consider the following: 1. The drawing stops after 5 draws if and only if exactly 2 of the 5 draws are repeats of the numbers already drawn and the 5th draw is the first time the third number is drawn. 2. The first 4 draws must contain exactly 2 different numbers, and the 5th draw must be the third different number. We will calculate the probability step-by-step as follows: 1. **Choose the two numbers that appear in the first 4 draws:** There are \\(\\binom{3}{2} = 3\\) ways to choose which two numbers appear in the first 4 draws. Let's say the two numbers are \\(a\\) and \\(b\\). 2. **Distribute \\(a\\) and \\(b\\) in the first 4 draws:** The number of ways to assign \\(a\\) and \\(b\\) to 4 draws such that both \\(a\\) and \\(b\\) appear at least once is the number of ways to partition 4 items into two non-empty groups, which is given by \\(2^4 - 2 = 16 - 2 = 14\\) (total ways to assign 4 draws to 2 numbers minus the 2 ways where all draws are the same number). 3. **Choose the third number for the 5th draw:** There are 2 numbers left to choose from, and the 5th draw must be the third number. 4. **Calculate the probability for a specific choice of numbers and distribution:** The probability of any specific sequence of 5 draws (with the above conditions) is \\(\\left(\\frac{1}{3}\\right)^5 = \\frac{1}{243}\\). Now, we combine all these probabilities together. The total number of favorable sequences is \\(3 \\times 14 \\times 2 = 84\\), and the probability of each sequence is \\(\\frac{1}{243}\\). Therefore, the total probability is: \\[ 84 \\times \\frac{1}{243} = \\frac{84}{243} = \\frac{28}{81}. \\] However, we need to re-evaluate the distribution part. The correct number of ways to distribute 4 draws between 2 numbers such that both numbers appear at least once is given by the \"stars and bars\" method with a\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(sub_df.iloc[0][\"prefix\"])"
+   ]
   }
  ],
  "metadata": {
