--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EXPERIMENT_NAME = \"test-l3.3-70b-200-12_15_2024\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -21,21 +30,211 @@
      "text": [
       "\n",
       "Number of solutions per problem:\n",
-      "Problem 3870: 3 solutions\n",
+      "Problem 1197: 6 solutions\n",
+      "Problem 1230: 3 solutions\n",
+      "Problem 3462: 7 solutions\n",
+      "Problem 3870: 6 solutions\n",
+      "Problem 6832: 4 solutions\n",
+      "Problem 6849: 4 solutions\n",
+      "Problem 8005: 3 solutions\n",
+      "Problem 9086: 3 solutions\n",
+      "Problem 9360: 4 solutions\n",
       "Problem 11176: 6 solutions\n",
-      "Problem 52144: 4 solutions\n",
+      "Problem 12391: 3 solutions\n",
+      "Problem 12491: 3 solutions\n",
+      "Problem 14430: 6 solutions\n",
+      "Problem 14671: 4 solutions\n",
+      "Problem 15973: 4 solutions\n",
+      "Problem 16930: 7 solutions\n",
+      "Problem 17024: 7 solutions\n",
+      "Problem 17849: 7 solutions\n",
+      "Problem 17988: 5 solutions\n",
+      "Problem 19176: 5 solutions\n",
+      "Problem 20737: 3 solutions\n",
+      "Problem 20740: 6 solutions\n",
+      "Problem 23888: 3 solutions\n",
+      "Problem 24351: 6 solutions\n",
+      "Problem 24681: 3 solutions\n",
+      "Problem 25721: 7 solutions\n",
+      "Problem 26227: 4 solutions\n",
+      "Problem 30925: 3 solutions\n",
+      "Problem 32102: 6 solutions\n",
+      "Problem 32349: 3 solutions\n",
+      "Problem 32631: 5 solutions\n",
+      "Problem 36361: 5 solutions\n",
+      "Problem 37979: 4 solutions\n",
+      "Problem 38175: 5 solutions\n",
+      "Problem 38246: 3 solutions\n",
+      "Problem 40374: 7 solutions\n",
+      "Problem 40744: 6 solutions\n",
+      "Problem 41105: 6 solutions\n",
+      "Problem 42996: 4 solutions\n",
+      "Problem 43483: 4 solutions\n",
+      "Problem 43861: 3 solutions\n",
+      "Problem 44120: 7 solutions\n",
+      "Problem 44289: 5 solutions\n",
+      "Problem 44426: 7 solutions\n",
+      "Problem 44965: 5 solutions\n",
+      "Problem 45247: 7 solutions\n",
+      "Problem 45889: 3 solutions\n",
+      "Problem 46755: 5 solutions\n",
+      "Problem 47926: 5 solutions\n",
+      "Problem 49986: 3 solutions\n",
+      "Problem 51679: 5 solutions\n",
+      "Problem 52144: 3 solutions\n",
+      "Problem 52831: 5 solutions\n",
+      "Problem 56637: 3 solutions\n",
+      "Problem 57510: 4 solutions\n",
+      "Problem 57947: 3 solutions\n",
+      "Problem 58245: 4 solutions\n",
+      "Problem 60529: 3 solutions\n",
+      "Problem 60727: 4 solutions\n",
+      "Problem 62331: 3 solutions\n",
+      "Problem 63979: 3 solutions\n",
+      "Problem 64935: 4 solutions\n",
+      "Problem 67184: 3 solutions\n",
+      "Problem 68281: 5 solutions\n",
+      "Problem 68997: 7 solutions\n",
+      "Problem 69889: 4 solutions\n",
+      "Problem 73403: 7 solutions\n",
+      "Problem 76450: 3 solutions\n",
+      "Problem 76671: 4 solutions\n",
       "Problem 80463: 4 solutions\n",
-      "Problem 91401: 4 solutions\n",
-      "Problem 114941: 4 solutions\n",
+      "Problem 83743: 3 solutions\n",
+      "Problem 87982: 6 solutions\n",
+      "Problem 88230: 6 solutions\n",
+      "Problem 88421: 3 solutions\n",
+      "Problem 88793: 4 solutions\n",
+      "Problem 90797: 4 solutions\n",
+      "Problem 91401: 3 solutions\n",
+      "Problem 92394: 3 solutions\n",
+      "Problem 93377: 6 solutions\n",
+      "Problem 93571: 7 solutions\n",
+      "Problem 94158: 4 solutions\n",
+      "Problem 94634: 5 solutions\n",
+      "Problem 96745: 6 solutions\n",
+      "Problem 97457: 5 solutions\n",
+      "Problem 99592: 7 solutions\n",
+      "Problem 101281: 3 solutions\n",
+      "Problem 101283: 7 solutions\n",
+      "Problem 101709: 6 solutions\n",
+      "Problem 102327: 6 solutions\n",
+      "Problem 103338: 3 solutions\n",
+      "Problem 103517: 3 solutions\n",
+      "Problem 103624: 4 solutions\n",
+      "Problem 104007: 3 solutions\n",
+      "Problem 104247: 6 solutions\n",
+      "Problem 104876: 3 solutions\n",
+      "Problem 104996: 4 solutions\n",
+      "Problem 105370: 4 solutions\n",
+      "Problem 109357: 7 solutions\n",
+      "Problem 112893: 3 solutions\n",
+      "Problem 113013: 3 solutions\n",
+      "Problem 114941: 5 solutions\n",
+      "Problem 114947: 3 solutions\n",
+      "Problem 115108: 3 solutions\n",
+      "Problem 116608: 4 solutions\n",
+      "Problem 117515: 3 solutions\n",
+      "Problem 119047: 4 solutions\n",
+      "Problem 123302: 4 solutions\n",
+      "Problem 124864: 6 solutions\n",
+      "Problem 131344: 7 solutions\n",
+      "Problem 131376: 4 solutions\n",
+      "Problem 132052: 3 solutions\n",
+      "Problem 134305: 7 solutions\n",
+      "Problem 134502: 6 solutions\n",
+      "Problem 134653: 5 solutions\n",
+      "Problem 135751: 4 solutions\n",
+      "Problem 136058: 3 solutions\n",
       "Problem 137187: 6 solutions\n",
-      "Problem 162713: 6 solutions\n",
-      "Problem 174230: 4 solutions\n",
-      "Problem 245856: 6 solutions\n"
+      "Problem 138022: 4 solutions\n",
+      "Problem 139155: 7 solutions\n",
+      "Problem 139261: 7 solutions\n",
+      "Problem 139636: 4 solutions\n",
+      "Problem 140070: 4 solutions\n",
+      "Problem 142644: 3 solutions\n",
+      "Problem 145005: 4 solutions\n",
+      "Problem 145729: 5 solutions\n",
+      "Problem 146857: 6 solutions\n",
+      "Problem 146915: 3 solutions\n",
+      "Problem 152220: 5 solutions\n",
+      "Problem 152815: 3 solutions\n",
+      "Problem 153451: 5 solutions\n",
+      "Problem 154145: 3 solutions\n",
+      "Problem 154350: 6 solutions\n",
+      "Problem 155777: 4 solutions\n",
+      "Problem 156330: 4 solutions\n",
+      "Problem 160102: 5 solutions\n",
+      "Problem 161968: 5 solutions\n",
+      "Problem 162424: 3 solutions\n",
+      "Problem 162857: 3 solutions\n",
+      "Problem 164872: 5 solutions\n",
+      "Problem 165110: 4 solutions\n",
+      "Problem 170202: 6 solutions\n",
+      "Problem 171306: 7 solutions\n",
+      "Problem 174305: 3 solutions\n",
+      "Problem 174868: 6 solutions\n",
+      "Problem 175777: 3 solutions\n",
+      "Problem 175803: 5 solutions\n",
+      "Problem 177023: 7 solutions\n",
+      "Problem 178375: 5 solutions\n",
+      "Problem 178404: 6 solutions\n",
+      "Problem 185107: 4 solutions\n",
+      "Problem 186021: 4 solutions\n",
+      "Problem 187515: 7 solutions\n",
+      "Problem 189582: 7 solutions\n",
+      "Problem 190584: 3 solutions\n",
+      "Problem 193004: 5 solutions\n",
+      "Problem 194094: 6 solutions\n",
+      "Problem 194964: 3 solutions\n",
+      "Problem 197584: 6 solutions\n",
+      "Problem 199353: 5 solutions\n",
+      "Problem 202539: 4 solutions\n",
+      "Problem 204483: 5 solutions\n",
+      "Problem 207313: 4 solutions\n",
+      "Problem 208653: 6 solutions\n",
+      "Problem 211225: 5 solutions\n",
+      "Problem 213608: 7 solutions\n",
+      "Problem 220473: 4 solutions\n",
+      "Problem 221588: 5 solutions\n",
+      "Problem 225027: 5 solutions\n",
+      "Problem 226240: 6 solutions\n",
+      "Problem 228715: 6 solutions\n",
+      "Problem 231567: 4 solutions\n",
+      "Problem 232879: 4 solutions\n",
+      "Problem 235624: 3 solutions\n",
+      "Problem 237619: 6 solutions\n",
+      "Problem 238398: 4 solutions\n",
+      "Problem 240524: 3 solutions\n",
+      "Problem 242003: 3 solutions\n",
+      "Problem 242843: 7 solutions\n",
+      "Problem 245856: 5 solutions\n",
+      "Problem 247013: 6 solutions\n",
+      "Problem 248262: 7 solutions\n",
+      "Problem 249546: 7 solutions\n",
+      "Problem 249580: 6 solutions\n",
+      "Problem 253992: 6 solutions\n",
+      "Problem 254050: 4 solutions\n",
+      "Problem 254567: 4 solutions\n",
+      "Problem 256611: 7 solutions\n",
+      "Problem 257149: 3 solutions\n",
+      "Problem 258400: 6 solutions\n",
+      "Problem 258684: 7 solutions\n",
+      "Problem 259476: 7 solutions\n",
+      "Problem 259702: 7 solutions\n",
+      "Problem 261329: 7 solutions\n",
+      "Problem 264282: 3 solutions\n",
+      "Problem 265513: 7 solutions\n",
+      "Problem 265959: 7 solutions\n",
+      "Problem 267138: 3 solutions\n",
+      "Problem 270050: 5 solutions\n",
+      "Problem 273581: 3 solutions\n",
+      "Problem 274556: 6 solutions\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv(\"datasets/derived/test-l3.3-70b-10-12_15_2024/interesting_problems.csv\")\n",
+    "df = pd.read_csv(f\"datasets/derived/{EXPERIMENT_NAME}/interesting_problems.csv\")\n",
     "# Create histogram of solutions per problem\n",
     "solution_counts = df.groupby('row_id')['solution_id'].count()\n",
     "print(\"\\nNumber of solutions per problem:\")\n",
@@ -45,29 +244,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Problem 1197: 3 solutions\n",
+      "Problem 1230: 3 solutions\n",
+      "Problem 3462: 3 solutions\n",
       "Problem 3870: 3 solutions\n",
+      "Problem 6832: 3 solutions\n",
+      "Problem 6849: 3 solutions\n",
+      "Problem 8005: 3 solutions\n",
+      "Problem 9086: 3 solutions\n",
+      "Problem 9360: 3 solutions\n",
       "Problem 11176: 3 solutions\n",
+      "Problem 12391: 3 solutions\n",
+      "Problem 12491: 3 solutions\n",
+      "Problem 14430: 3 solutions\n",
+      "Problem 14671: 3 solutions\n",
+      "Problem 15973: 3 solutions\n",
+      "Problem 16930: 3 solutions\n",
+      "Problem 17024: 3 solutions\n",
+      "Problem 17849: 3 solutions\n",
+      "Problem 17988: 3 solutions\n",
+      "Problem 19176: 3 solutions\n",
+      "Problem 20737: 3 solutions\n",
+      "Problem 20740: 3 solutions\n",
+      "Problem 23888: 3 solutions\n",
+      "Problem 24351: 3 solutions\n",
+      "Problem 24681: 3 solutions\n",
+      "Problem 25721: 3 solutions\n",
+      "Problem 26227: 3 solutions\n",
+      "Problem 30925: 3 solutions\n",
+      "Problem 32102: 3 solutions\n",
+      "Problem 32349: 3 solutions\n",
+      "Problem 32631: 3 solutions\n",
+      "Problem 36361: 3 solutions\n",
+      "Problem 37979: 3 solutions\n",
+      "Problem 38175: 3 solutions\n",
+      "Problem 38246: 3 solutions\n",
+      "Problem 40374: 3 solutions\n",
+      "Problem 40744: 3 solutions\n",
+      "Problem 41105: 3 solutions\n",
+      "Problem 42996: 3 solutions\n",
+      "Problem 43483: 3 solutions\n",
+      "Problem 43861: 3 solutions\n",
+      "Problem 44120: 3 solutions\n",
+      "Problem 44289: 3 solutions\n",
+      "Problem 44426: 3 solutions\n",
+      "Problem 44965: 3 solutions\n",
+      "Problem 45247: 3 solutions\n",
+      "Problem 45889: 3 solutions\n",
+      "Problem 46755: 3 solutions\n",
+      "Problem 47926: 3 solutions\n",
+      "Problem 49986: 3 solutions\n",
+      "Problem 51679: 3 solutions\n",
       "Problem 52144: 3 solutions\n",
+      "Problem 52831: 3 solutions\n",
+      "Problem 56637: 3 solutions\n",
+      "Problem 57510: 3 solutions\n",
+      "Problem 57947: 3 solutions\n",
+      "Problem 58245: 3 solutions\n",
+      "Problem 60529: 3 solutions\n",
+      "Problem 60727: 3 solutions\n",
+      "Problem 62331: 3 solutions\n",
+      "Problem 63979: 3 solutions\n",
+      "Problem 64935: 3 solutions\n",
+      "Problem 67184: 3 solutions\n",
+      "Problem 68281: 3 solutions\n",
+      "Problem 68997: 3 solutions\n",
+      "Problem 69889: 3 solutions\n",
+      "Problem 73403: 3 solutions\n",
+      "Problem 76450: 3 solutions\n",
+      "Problem 76671: 3 solutions\n",
       "Problem 80463: 3 solutions\n",
+      "Problem 83743: 3 solutions\n",
+      "Problem 87982: 3 solutions\n",
+      "Problem 88230: 3 solutions\n",
+      "Problem 88421: 3 solutions\n",
+      "Problem 88793: 3 solutions\n",
+      "Problem 90797: 3 solutions\n",
       "Problem 91401: 3 solutions\n",
+      "Problem 92394: 3 solutions\n",
+      "Problem 93377: 3 solutions\n",
+      "Problem 93571: 3 solutions\n",
+      "Problem 94158: 3 solutions\n",
+      "Problem 94634: 3 solutions\n",
+      "Problem 96745: 3 solutions\n",
+      "Problem 97457: 3 solutions\n",
+      "Problem 99592: 3 solutions\n",
+      "Problem 101281: 3 solutions\n",
+      "Problem 101283: 3 solutions\n",
+      "Problem 101709: 3 solutions\n",
+      "Problem 102327: 3 solutions\n",
+      "Problem 103338: 3 solutions\n",
+      "Problem 103517: 3 solutions\n",
+      "Problem 103624: 3 solutions\n",
+      "Problem 104007: 3 solutions\n",
+      "Problem 104247: 3 solutions\n",
+      "Problem 104876: 3 solutions\n",
+      "Problem 104996: 3 solutions\n",
+      "Problem 105370: 3 solutions\n",
+      "Problem 109357: 3 solutions\n",
+      "Problem 112893: 3 solutions\n",
+      "Problem 113013: 3 solutions\n",
       "Problem 114941: 3 solutions\n",
+      "Problem 114947: 3 solutions\n",
+      "Problem 115108: 3 solutions\n",
+      "Problem 116608: 3 solutions\n",
+      "Problem 117515: 3 solutions\n",
+      "Problem 119047: 3 solutions\n",
+      "Problem 123302: 3 solutions\n",
+      "Problem 124864: 3 solutions\n",
+      "Problem 131344: 3 solutions\n",
+      "Problem 131376: 3 solutions\n",
+      "Problem 132052: 3 solutions\n",
+      "Problem 134305: 3 solutions\n",
+      "Problem 134502: 3 solutions\n",
+      "Problem 134653: 3 solutions\n",
+      "Problem 135751: 3 solutions\n",
+      "Problem 136058: 3 solutions\n",
       "Problem 137187: 3 solutions\n",
-      "Problem 162713: 3 solutions\n",
-      "Problem 174230: 3 solutions\n",
-      "Problem 245856: 3 solutions\n"
+      "Problem 138022: 3 solutions\n",
+      "Problem 139155: 3 solutions\n",
+      "Problem 139261: 3 solutions\n",
+      "Problem 139636: 3 solutions\n",
+      "Problem 140070: 3 solutions\n",
+      "Problem 142644: 3 solutions\n",
+      "Problem 145005: 3 solutions\n",
+      "Problem 145729: 3 solutions\n",
+      "Problem 146857: 3 solutions\n",
+      "Problem 146915: 3 solutions\n",
+      "Problem 152220: 3 solutions\n",
+      "Problem 152815: 3 solutions\n",
+      "Problem 153451: 3 solutions\n",
+      "Problem 154145: 3 solutions\n",
+      "Problem 154350: 3 solutions\n",
+      "Problem 155777: 3 solutions\n",
+      "Problem 156330: 3 solutions\n",
+      "Problem 160102: 3 solutions\n",
+      "Problem 161968: 3 solutions\n",
+      "Problem 162424: 3 solutions\n",
+      "Problem 162857: 3 solutions\n",
+      "Problem 164872: 3 solutions\n",
+      "Problem 165110: 3 solutions\n",
+      "Problem 170202: 3 solutions\n",
+      "Problem 171306: 3 solutions\n",
+      "Problem 174305: 3 solutions\n",
+      "Problem 174868: 3 solutions\n",
+      "Problem 175777: 3 solutions\n",
+      "Problem 175803: 3 solutions\n",
+      "Problem 177023: 3 solutions\n",
+      "Problem 178375: 3 solutions\n",
+      "Problem 178404: 3 solutions\n",
+      "Problem 185107: 3 solutions\n",
+      "Problem 186021: 3 solutions\n",
+      "Problem 187515: 3 solutions\n",
+      "Problem 189582: 3 solutions\n",
+      "Problem 190584: 3 solutions\n",
+      "Problem 193004: 3 solutions\n",
+      "Problem 194094: 3 solutions\n",
+      "Problem 194964: 3 solutions\n",
+      "Problem 197584: 3 solutions\n",
+      "Problem 199353: 3 solutions\n",
+      "Problem 202539: 3 solutions\n",
+      "Problem 204483: 3 solutions\n",
+      "Problem 207313: 3 solutions\n",
+      "Problem 208653: 3 solutions\n",
+      "Problem 211225: 3 solutions\n",
+      "Problem 213608: 3 solutions\n",
+      "Problem 220473: 3 solutions\n",
+      "Problem 221588: 3 solutions\n",
+      "Problem 225027: 3 solutions\n",
+      "Problem 226240: 3 solutions\n",
+      "Problem 228715: 3 solutions\n",
+      "Problem 231567: 3 solutions\n",
+      "Problem 232879: 3 solutions\n",
+      "Problem 235624: 3 solutions\n",
+      "Problem 237619: 3 solutions\n",
+      "Problem 238398: 3 solutions\n",
+      "Problem 240524: 3 solutions\n",
+      "Problem 242003: 3 solutions\n",
+      "Problem 242843: 3 solutions\n",
+      "Problem 245856: 3 solutions\n",
+      "Problem 247013: 3 solutions\n",
+      "Problem 248262: 3 solutions\n",
+      "Problem 249546: 3 solutions\n",
+      "Problem 249580: 3 solutions\n",
+      "Problem 253992: 3 solutions\n",
+      "Problem 254050: 3 solutions\n",
+      "Problem 254567: 3 solutions\n",
+      "Problem 256611: 3 solutions\n",
+      "Problem 257149: 3 solutions\n",
+      "Problem 258400: 3 solutions\n",
+      "Problem 258684: 3 solutions\n",
+      "Problem 259476: 3 solutions\n",
+      "Problem 259702: 3 solutions\n",
+      "Problem 261329: 3 solutions\n",
+      "Problem 264282: 3 solutions\n",
+      "Problem 265513: 3 solutions\n",
+      "Problem 265959: 3 solutions\n",
+      "Problem 267138: 3 solutions\n",
+      "Problem 270050: 3 solutions\n",
+      "Problem 273581: 3 solutions\n",
+      "Problem 274556: 3 solutions\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "df = pd.read_csv(\"datasets/derived/test-l3.3-70b-10-12_15_2024/interesting_problems_on_policy_solutions.csv\")\n",
+    "df = pd.read_csv(f\"datasets/derived/{EXPERIMENT_NAME}/interesting_problems_on_policy_solutions.csv\")\n",
     "# Create histogram of solutions per problem\n",
     "solution_counts = df.groupby('row_id')['solution_id'].count()\n",
     "for row_id, count in solution_counts.items():\n",
@@ -272,7 +661,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"/home/sam/code/cohere/cohere-reasoning-v5/datasets/derived/test-l3.3-70b-10-12_15_2024/interesting_problems_completed.csv\")\n",
+    "df = pd.read_csv(f\"datasets/derived/{EXPERIMENT_NAME}/interesting_problems_completed.csv\")\n",
     "print(list(df.columns))\n",
     "df.head()"
    ]
