--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -12,6 +12,129 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'header': ['House',\n",
+       "  'Name',\n",
+       "  'Nationality',\n",
+       "  'BookGenre',\n",
+       "  'Food',\n",
+       "  'Color',\n",
+       "  'Animal'],\n",
+       " 'rows': [['1', 'Bob', 'german', 'mystery', 'grilled cheese', 'yellow', 'dog'],\n",
+       "  ['2', 'Eric', 'norwegian', 'fantasy', 'stew', 'blue', 'fish'],\n",
+       "  ['3', 'Peter', 'dane', 'science fiction', 'spaghetti', 'green', 'cat'],\n",
+       "  ['4', 'Arnold', 'swede', 'biography', 'stir fry', 'red', 'bird'],\n",
+       "  ['5', 'Alice', 'brit', 'romance', 'pizza', 'white', 'horse']]}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "private_df "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>row_id</th>\n",
+       "      <th>problem</th>\n",
+       "      <th>solution</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>How many vertical asymptotes does the graph of...</td>\n",
+       "      <td>The denominator of the rational function facto...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>What is the positive difference between $120\\%...</td>\n",
+       "      <td>One hundred twenty percent of 30 is $120\\cdot3...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Find $x$ such that $\\lceil x \\rceil + x = \\dfr...</td>\n",
+       "      <td>First, we note that $x$ must be positive, sinc...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Evaluate $i^5+i^{-25}+i^{45}$.</td>\n",
+       "      <td>We have $i^5 = i^4\\cdot i = 1\\cdot (i) = i$.  ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>If $2^8=4^x$, what is the value of $x$?</td>\n",
+       "      <td>Rewrite $4$ as $2^2$ to find $4^x=2^{2x}$.  Si...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   row_id                                            problem  \\\n",
+       "0       0  How many vertical asymptotes does the graph of...   \n",
+       "1       1  What is the positive difference between $120\\%...   \n",
+       "2       2  Find $x$ such that $\\lceil x \\rceil + x = \\dfr...   \n",
+       "3       3                     Evaluate $i^5+i^{-25}+i^{45}$.   \n",
+       "4       4            If $2^8=4^x$, what is the value of $x$?   \n",
+       "\n",
+       "                                            solution  \n",
+       "0  The denominator of the rational function facto...  \n",
+       "1  One hundred twenty percent of 30 is $120\\cdot3...  \n",
+       "2  First, we note that $x$ must be positive, sinc...  \n",
+       "3  We have $i^5 = i^4\\cdot i = 1\\cdot (i) = i$.  ...  \n",
+       "4  Rewrite $4$ as $2^2$ to find $4^x=2^{2x}$.  Si...  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"datasets/original/competition_math.csv\")\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
